--- a/css/forms/index.css
+++ b/css/forms/index.css
@@ -1,3 +1,3 @@
 @import url("./common/index.css");
-
 @import url("./conversation-creation-form/index.css");
+@import url("./pull-scene-participants-form/index.css");
