Rework: Rename CSS folder structure for the active conversation styles

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
-@import url("./active-conversation/index.css");
 @import url("./common/index.css");
+@import url("./conversation-ui/index.css");
 @import url("./drag-and-drop/index.css");
 @import url("./forms/index.css");
 @import url("./misc.css");
