--- a/templates/forms/pull-scene-participants-forms.hbs
+++ b/templates/forms/pull-scene-participants-forms.hbs
@@ -32,7 +32,7 @@
 
   {{!-- Actors pulled from current scene --}}
   <div class="chud-form-content chud-overflow-y-auto">
-    <div id="scene-participants-list" class="flexcol chud-h-100">
+    <div id="sceneParticipantsList" class="flexcol chud-h-100">
       {{#each participants as |participant index|}}
         <div class="chud-list-entry">
           <div class="chud-actions-wrapper">
