--- a/templates/fragments/active-participant-content.hbs
+++ b/templates/fragments/active-participant-content.hbs
@@ -4,7 +4,9 @@
     class="active-participant-faction {{#unless participant.faction.displayFaction}}faction-disabled{{/unless}}"
     {{#if displayParticipant}}data-tooltip="{{participant.faction.factionName}}"{{/if}}
   >
-    {{> "modules/conversation-hud/templates/fragments/faction_wrapper.hbs" faction=participant.faction}}
+    {{> "modules/conversation-hud/templates/fragments/faction-banner.hbs"
+      faction=participant.faction
+    }}
     <p class="faction-name {{activeParticipantFactionFontSize}}">{{participant.faction.factionName}}</p>
   </div>
 
