--- a/templates/fragments/faction-data.hbs
+++ b/templates/fragments/faction-data.hbs
@@ -164,38 +164,18 @@
 
     {{!-- Banner preview --}}
     <div class="banner-preview-wrapper">
-      <div id="banner-preview-image" class="banner-preview-image {{#if factionBannerEnabled}}has-banner{{/if}}">
+      <div id="banner-preview-image" class="banner-preview-image {{#if factionBannerEnabled}}chud-banner-enabled{{/if}}">
         {{#unless (or factionLogo factionBannerEnabled)}}
           <p class="no-banner-preview-text">{{localize 'CHUD.faction.noBannerPreview'}}</p>
         {{/unless}}
 
         <img id="banner-preview-logo" src="{{factionLogo}}" alt="Banner Preview Logo">
 
-        {{#if factionBannerEnabled}}
-          {{#if (eq factionBannerShape "shape-1")}}
-            {{> "modules/conversation-hud/templates/banner-shapes/shape-1.hbs" color=factionBannerTint}}
-          {{/if}}
-
-          {{#if (eq factionBannerShape "shape-2")}}
-            {{> "modules/conversation-hud/templates/banner-shapes/shape-2.hbs" color=factionBannerTint}}
-          {{/if}}
-
-          {{#if (eq factionBannerShape "shape-3")}}
-            {{> "modules/conversation-hud/templates/banner-shapes/shape-3.hbs" color=factionBannerTint}}
-          {{/if}}
-
-          {{#if (eq factionBannerShape "shape-4")}}
-            {{> "modules/conversation-hud/templates/banner-shapes/shape-4.hbs" color=factionBannerTint}}
-          {{/if}}
-
-          {{#if (eq factionBannerShape "shape-5")}}
-            {{> "modules/conversation-hud/templates/banner-shapes/shape-5.hbs" color=factionBannerTint}}
-          {{/if}}
-
-          {{#if (eq factionBannerShape "shape-6")}}
-            {{> "modules/conversation-hud/templates/banner-shapes/shape-6.hbs" color=factionBannerTint}}
-          {{/if}}
-        {{/if}}
+        {{> "modules/conversation-hud/templates/fragments/faction-banner-shape.hbs"
+          factionBannerEnabled=factionBannerEnabled
+          factionBannerShape=factionBannerShape
+          factionBannerTint=factionBannerTint
+        }}
       </div>
 
       <p>{{localize "CHUD.faction.bannerPreview"}}</p>
