--- a/css/common/index.css
+++ b/css/common/index.css
@@ -1,3 +1,3 @@
 @import url("./conversation-participants-list/index.css");
-
 @import url("./faction-data/index.css");
+@import url("./participating-users-list/index.css");
