--- a/css/common/participating-users-list/participating-user.css
+++ b/css/common/participating-users-list/participating-user.css
@@ -23,6 +23,10 @@
   font-size: 16px;
 }
 
+.chud-participating-users-list .chud-participating-user .chud-entry-header .chud-accordion.chud-collapsed > i {
+  transform: rotate(180deg);
+}
+
 /* --------------------------- */
 
 .chud-participating-users-list .chud-participating-user .chud-entry-header .chud-name {
@@ -43,14 +47,10 @@
 /* --------------------------- */
 
 .chud-participating-users-list .chud-participating-user .chud-entry-header .chud-actions {
+  display: flex;
+  flex-flow: row;
   margin-left: auto;
-}
-
-/* --------------------------- */
-
-.chud-participating-users-list .chud-participating-user .chud-entry-content {
-  margin-left: 36px;
-  min-height: 100px;
+  gap: 10px;
 }
 
 /* --------------------------- */
