--- a/css/common/participating-users-list/content.css
+++ b/css/common/participating-users-list/content.css
@@ -11,10 +11,10 @@
   text-align: center;
 }
 
-.chud-participating-users-list .chud-content > * {
-  border-bottom: 1px solid var(--color-border-light-2);
+.chud-participating-users-list .chud-content > .chud-participating-user {
+  border-bottom: 2px solid var(--color-border-dark-5);
 }
 
-.chud-participating-users-list .chud-content > *:last-child {
+.chud-participating-users-list .chud-content > .chud-participating-user:last-child {
   border-bottom: none;
 }
