--- a/css/v2/common/application/fieldset.css
+++ b/css/v2/common/application/fieldset.css
@@ -6,7 +6,10 @@
 
 .chud-fieldset-legend-with-actions > .chud-line {
   flex: 1;
-  border-bottom: 1px solid var(--color-fieldset-border);
+  border-bottom: 2px groove var(--color-fieldset-border);
+  margin-left: 3px;
+  margin-right: 3px;
+  margin-top: 1px;
 }
 
 .chud-fieldset-legend-with-actions > .chud-actions {
