--- a/templates/forms/select-participating-users-form.hbs
+++ b/templates/forms/select-participating-users-form.hbs
@@ -1,58 +1,53 @@
-<form class="sheet chud-h-100">
-  <div class="flexrow chud-form-sub-header">
-    <p> {{localize 'CHUD.strings.availableUsers'}} </p>
+<div class="standard-form chud-flex-1" data-application-part="body">
+  <fieldset class="chud-flex-1">
+    <legend class="chud-fieldset-legend-with-actions">
+      <span class="chud-label">
+        {{localize 'CHUD.strings.availableUsers'}}
+      </span>
 
-    <button
-      type="button"
-      name="deselect-all"
-      id="deselect-all"
-      title="{{localize 'CHUD.actions.selection.deselectAll'}}"
-    >
-      <i class="fa-regular fa-square"></i>
-    </button>
-          
-    <button
-      type="button"
-      name="select-all"
-      id="select-all"
-      title="{{localize 'CHUD.actions.selection.selectAll'}}"
-    >
-      <i class="fa-regular fa-square-check"></i>
-    </button>
-  </div>
+      <span class="chud-line"></span>
 
-  <div class="chud-form-content chud-overflow-y-auto">
-    <div id="participatingUsersList" class="flexcol chud-h-100">
-      {{#if users}}
-        {{#each users}}
-          <label class="checkbox">
-            <input
-              type="checkbox"
-              name="users"
-              value="{{userData.id}}"
-              {{#if isChecked}}checked{{/if}}
-            />
-            {{userData.name}}
-          </label>
-        {{/each}}
-      {{else}}
-        <p class="chud-no-users-message">
-          {{localize 'CHUD.strings.noUsersInList'}}
-        </p> 
-      {{/if}}
+      <span class="chud-actions">
+        <button
+          type="button"
+          name="deselect-all"
+          id="deselect-all"
+          class="icon fa-regular fa-square"
+          data-tooltip
+          aria-label="{{localize 'CHUD.actions.selection.deselectAll'}}"
+        ></button>
+
+        <button
+          type="button"
+          name="select-all"
+          id="select-all"
+          class="icon fa-regular fa-square-check"
+          data-tooltip
+          aria-label="{{localize 'CHUD.actions.selection.selectAll'}}"
+        ></button>
+      </span>
+    </legend>
+
+    <div class="flexcol chud-form-content">
+      <div id="participatingUsersList" class="scrollable">
+        {{#if users}}
+          {{#each users}}
+            <label class="checkbox">
+              <input
+                type="checkbox"
+                name="users"
+                value="{{userData.id}}"
+                {{#if isChecked}}checked{{/if}}
+              />
+              {{userData.name}}
+            </label>
+          {{/each}}
+        {{else}}
+          <p class="chud-no-users-message">
+            {{localize 'CHUD.strings.noUsersInList'}}
+          </p> 
+        {{/if}}
+      </div>
     </div>
-  </div>
-
-  <div class="chud-form-footer">
-    <footer class="sheet-footer flexrow">
-      <button
-        type="submit"
-        name="submit"
-        title="{{localize 'CHUD.actions.startConversation'}}"
-      >
-        <i class="fa fa-plus"></i>
-        {{localize 'CHUD.actions.addUsers'}}
-      </button>
-    </footer>
-  </div>
-</form>
+  </fieldset>
+</div>
