--- a/css/v2/common/application/fieldset.css
+++ b/css/v2/common/application/fieldset.css
@@ -21,5 +21,7 @@
 .chud-fieldset-legend-with-actions > .chud-actions > button {
   flex: 0 0 28px;
   width: 28px;
+  min-width: 28px;
   height: 28px;
+  min-height: 28px;
 }
