Rework: Remove deprecated function calls + misc improvements

--- a/templates/fragments/participating-users-list.hbs
+++ b/templates/fragments/participating-users-list.hbs
@@ -1,6 +1,6 @@
-<div class="chud-participating-users-list">
+<div class="chud-participating-users-list chud-flex-1">
   {{#if participatingUsers}}
-    <div id="conversationParticipatingUsersList" class="chud-content">
+    <div id="conversationParticipatingUsersList" class="scrollable chud-content chud-flex-1">
       {{#each participatingUsers as |participatingUser index|}}
         <div class="chud-participating-user">
           <div class="chud-entry-header">
