Rework: Fix visibility toggle + remove CHUD button from scene controls

--- a/templates/sidebar/header.hbs
+++ b/templates/sidebar/header.hbs
@@ -12,19 +12,18 @@
 
         <button
           type="button"
-          class="inline-control icon fa-solid fa-user-plus"
+          class="inline-control icon fa-solid fa-up-from-bracket"
           data-tooltip
-          aria-label="{{localize 'CHUD.actions.participant.add'}}"
-          onclick='game.ConversationHud.executeFunction({{{json (object scope="local" type="add-participant")}}})'
+          aria-label="{{localize 'CHUD.actions.pullParticipants'}}"
+          onclick='game.ConversationHud.executeFunction({{{json (object scope="local" type="pull-participants-from-scene" data=(object))}}})'
         ></button>
       </div>
     {{/if}}
 
     <strong class="conversation-title">Participants</strong>
 
-
     {{#if (isGm)}}
-      <div style="width: 24px;"></div>
+      <div style="flex: 0 0 52px; width: 52px;"></div>
     {{/if}}
   {{/if}}
 </div>
