Rework: Localization fixes

--- a/templates/fragments/faction-banner.hbs
+++ b/templates/fragments/faction-banner.hbs
@@ -1,6 +1,5 @@
 <div class="chud-faction-banner {{#if faction.factionBannerEnabled}}chud-banner-enabled{{/if}} {{#unless faction.displayFaction}}disabled{{/unless}}">
-  {{!-- TODO: Localize alt property --}}
-  <img class="chud-faction-logo" src="{{faction.factionLogo}}" alt="Faction Logo">
+  <img class="chud-faction-logo" src="{{faction.factionLogo}}" alt="Faction logo">
 
   {{> "modules/conversation-hud/templates/fragments/faction-banner-shape.hbs"
     factionBannerEnabled=faction.factionBannerEnabled
