Rework: Update conversation sheet to use JournalEntry + misc fixes and improvements

--- a/css/v2/index.css
+++ b/css/v2/index.css
@@ -1,3 +1,4 @@
 @import url("./common/index.css");
 @import url("./conversation-ui/index.css");
+@import url("./sheets/index.css");
 @import url("./sidebar/index.css");
