Rework: Update faction sheet to use JournalEntry + misc fixes and improvements

--- a/css/common/faction-data/banner-preview.css
+++ b/css/common/faction-data/banner-preview.css
@@ -17,7 +17,7 @@
   height: 165px;
   position: relative;
 
-  border: 1px solid var(--color-border-light-tertiary);
+  border: 1px solid var(--color-fieldset-border);
   border-radius: 3px;
 
   background: rgba(0, 0, 0, 0.05);
