--- a/templates/fragments/faction-data.hbs
+++ b/templates/fragments/faction-data.hbs
@@ -10,7 +10,7 @@
         name="factionName"
         placeholder="{{localize 'CHUD.faction.factionName.placeholder'}}"
         value="{{factionName}}"
-        {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
+        {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
       />
 
       {{#unless hasSelectedFaction}}
@@ -38,7 +38,7 @@
             name="factionImg"
             type="imagevideo"
             value="{{factionLogo}}" 
-            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
           ></file-picker>
         </div>
         <p class="hint">{{localize "CHUD.faction.factionLogo.hint"}}</p>
@@ -52,7 +52,7 @@
             type="checkbox"
             name="displayFactionBanner"
             {{checked factionBannerEnabled}}
-            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
           >
         </div>
         <p class="hint">{{localize "CHUD.faction.displayFactionBanner.hint"}}</p>
@@ -68,7 +68,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-1")}}active{{/if}}"
             type="button"
             name="shape-1"
-            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}  
+            {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-1.hbs" color='var(--button-text-color)'}}
           </button>
@@ -78,7 +78,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-2")}}active{{/if}}"
             type="button"
             name="shape-2"
-            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-2.hbs" color='var(--button-text-color)'}}
           </button>
@@ -88,7 +88,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-3")}}active{{/if}}"
             type="button"
             name="shape-3"
-            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-3.hbs" color='var(--button-text-color)'}}
           </button>
@@ -98,7 +98,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-4")}}active{{/if}}"
             type="button"
             name="shape-4"
-            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}  
+            {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-4.hbs" color='var(--button-text-color)'}}
           </button>
@@ -108,7 +108,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-5")}}active{{/if}}"
             type="button"
             name="shape-5"
-            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-5.hbs" color='var(--button-text-color)'}}
           </button>
@@ -118,7 +118,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-6")}}active{{/if}}"
             type="button"
             name="shape-6"
-            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-6.hbs" color='var(--button-text-color)'}}
           </button>
@@ -134,7 +134,7 @@
           <color-picker
             name="factionTint"
             value="{{factionBannerTint}}"
-            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1" disabled{{/if}}
           ></color-picker>
         </div>
         <p class="hint">{{localize "CHUD.faction.factionBannerColor.hint"}}</p>
