Rework: Fix linked actor and journal buttons

--- a/templates/forms/pull-scene-participants-form.hbs
+++ b/templates/forms/pull-scene-participants-form.hbs
@@ -49,7 +49,7 @@
                   class="show-linked-conversation"
                   title="{{localize 'CHUD.actions.showLinkedConversation'}}"
                 >
-                  <i class="fas fa-book"></i>
+                  <i class="fas fa-book-open"></i>
                 </a>
               {{else}}
                 {{#if (eq participant.type 'participant')}}
@@ -58,7 +58,7 @@
                     class="edit"
                     title="{{localize 'CHUD.actions.participant.edit'}}"
                   >
-                    <i class="fas fa-pencil"></i>
+                    <i class="fas fa-edit"></i>
                   </a>
                 {{else}}
                   {{!-- TODO: Display a better error container --}}
