--- a/templates/fragments/selectable-participant-entry.hbs
+++ b/templates/fragments/selectable-participant-entry.hbs
@@ -24,7 +24,7 @@
           title="{{localize 'CHUD.strings.linkedJournal.name'}}"
           onclick="game.ConversationHud.displayLinkedParticipantNotes({{index}})"
         >
-          <i class="fas fa-book"></i>
+          <i class="fas fa-book-open"></i>
         </a>
       {{/if}}
 
