--- a/templates/forms/pull-scene-participants-form.hbs
+++ b/templates/forms/pull-scene-participants-form.hbs
@@ -10,7 +10,6 @@
       <span class="chud-actions">
         <button
           type="button"
-          name="deselect-all"
           id="deselect-all"
           class="icon fa-solid fa-square"
           data-tooltip
@@ -19,7 +18,6 @@
 
         <button
           type="button"
-          name="select-visible"
           id="select-visible"
           class="icon fa-solid fa-square-minus"
           data-tooltip
@@ -28,7 +26,6 @@
               
         <button
           type="button"
-          name="select-all"
           id="select-all"
           class="icon fa-solid fa-square-check"
           data-tooltip
@@ -39,27 +36,27 @@
 
     {{!-- Actors pulled from current scene --}}
     <div class="flexcol chud-form-content">
-      <div id="sceneParticipantsList" class="scrollable chud-flex-1">
+      <div id="scene-participants-list" class="scrollable chud-flex-1">
         {{#each participants as |participant index|}}
           <div class="chud-list-entry">
             <div class="chud-actions-wrapper">
               {{#if (eq participant.type 'conversation')}}
-                <a
+                <button
+                  type="button"
                   id="show-linked-conversation-button"
-                  class="show-linked-conversation"
-                  title="{{localize 'CHUD.actions.showLinkedConversation'}}"
-                >
-                  <i class="fas fa-book-open"></i>
-                </a>
+                  class="inline-control icon fa-solid fa-book-open"
+                  data-tooltip
+                  aria-label="{{localize 'CHUD.actions.showLinkedConversation'}}"
+                ></button>
               {{else}}
                 {{#if (eq participant.type 'participant')}}
-                  <a
+                  <button
+                    type="button"
                     id="participant-edit-button"
-                    class="edit"
+                    class="inline-control icon fa-solid fa-edit"
+                    data-tooltip
                     title="{{localize 'CHUD.actions.participant.edit'}}"
-                  >
-                    <i class="fas fa-edit"></i>
-                  </a>
+                  ></button>
                 {{else}}
                   {{!-- TODO: Display a better error container --}}
                   <p>ERROR</p>
