--- a/templates/sidebar/participants.hbs
+++ b/templates/sidebar/participants.hbs
@@ -2,26 +2,36 @@
   {{#if isActive}}
     {{#switch conversationType}}
       {{#case "gm-controlled"}}
-        {{#if (and participants.length (or (isGm) isVisible))}}
-          <div class="gm-controlled-participants-list">
-            {{#each participants as |participant index|}}
-              <div class="participant-drag-drop-container">
-                <div class="drag-drop-indicator drag-drop-indicator-top"></div>
-                
-                {{> "modules/conversation-hud/templates/sidebar/participant.hbs"
-                  index=index
-                  participant=participant
-                  activeParticipantIndex=../activeParticipantIndex
-                }}
-                
-                <div class="drag-drop-indicator drag-drop-indicator-bottom"></div>
-              </div>
-            {{/each}}
-          </div>
+        {{#if (or (isGm) (and isVisible displayParticipantsToPlayers))}}
+          {{#if participants.length}}
+            {{!-- Show participants list --}}
+            <div class="gm-controlled-participants-list">
+              {{#each participants as |participant index|}}
+                <div class="participant-drag-drop-container">
+                  <div class="drag-drop-indicator drag-drop-indicator-top"></div>
+                  
+                  {{> "modules/conversation-hud/templates/sidebar/participant.hbs"
+                    index=index
+                    participant=participant
+                    activeParticipantIndex=../activeParticipantIndex
+                  }}
+                  
+                  <div class="drag-drop-indicator drag-drop-indicator-bottom"></div>
+                </div>
+              {{/each}}
+            </div>
+          {{else}}
+            {{!-- No participants exist --}}
+            <div class="chud-no-data-message">
+              <i class="fa fa-users-slash" aria-hidden="true"></i>
+              <p>{{localize "CHUD.strings.noParticipants"}}</p>
+            </div>
+          {{/if}}
         {{else}}
+          {{!-- Participants list is hidden from non-GMs --}}
           <div class="chud-no-data-message">
-            <i class="fa fa-users-slash" aria-hidden="true"></i>
-            <p>{{localize "CHUD.strings.noParticipants"}}</p>
+            <i class="fa-solid fa-eye-slash" aria-hidden="true"></i>
+            <p>{{localize "CHUD.strings.participantsHidden"}}</p>
           </div>
         {{/if}}
       {{/case}}
